TWC3167-5816, TWC3167-5870, TWC3167-5880 : Meet Comp Alignment fixes, Copy contract pop up loader, multichecker filter - UI Bug Fixes (#2138)

--- a/Intel.MyDeals/Client/src/app/dashboard/copyContract/copyContract.component.css
+++ b/Intel.MyDeals/Client/src/app/dashboard/copyContract/copyContract.component.css
@@ -1,1 +1,141 @@
-﻿#copyCntrctDlg{padding:0!important;height:595px}.cc-popup-load #copyCntrctGrid td{cursor:pointer!important}.cc-popup-load .k-grid td.k-state-selected,.cc-popup-load .k-grid tr.k-state-selected>td{border:none;background-color:#00AEEF!important;color:white!important}.cc-popup-load .k-grid>td{padding:0}.cc-popup-load .k-grid td{cursor:pointer}.cc-popup-load .inner-addon{position:relative}.cc-popup-load .inner-addon .glyphicon{position:absolute;padding:9px;pointer-events:none}.cc-popup-load .left-addon .glyphicon{left:0}.cc-popup-load .right-addon .glyphicon{right:5px;top:3px}.cc-popup-load .form-control{border-radius:0!important;box-shadow:none!important;border-color:#d2d6de!important}.cc-popup-load .form-control:focus{border-color:#3c8dbc!important}.cc-popup-load .btn{border-radius:3px;-webkit-box-shadow:none;box-shadow:none;border:1px solid transparent}.cc-popup-load .btn-primary[disabled],.cc-popup-load .btn-primary[disabled]:hover{background-color:#edeff0!important;color:#b1babf!important;border-color:#b1babf!important;cursor:not-allowed!important;pointer-events:all!important}.cc-popup-load .btn-secondary{color:#0071c5!important;background:#fff!important;border-color:#b1babf!important}.cc-popup-load .btn-secondary:hover,.cc-popup-load .btn-secondary:focus,.cc-popup-load .btn-secondary.focus{color:#0071c5!important;background-color:#edeff0!important;border-color:#b1babf!important}.cc-popup-load .dis-approve{margin-left:67px}.cc-popup-load .k-grid.append-grid-changes td{border:0!important}.cc-popup-load .k-grid.append-grid-changes table tbody tr{background-color:transparent!important}.cc-popup-load .k-grid.append-grid-changes table tbody tr td{border-bottom:1px solid #e6e6e6!important}.cc-popup-load .app-layers{width:375px;margin-top:10px;margin-left:67px}.cc-popup-load .cc-pop-up{margin-top:-24px;margin-left:-24px;margin-right:-24px}.cc-popup-load nav.navbar.navbar-default.rmv-padding.cc-pop-up{height:50px}.cc-popup-load .title_style label{font-weight:bold!important}.navbar-default .navbar-nav>li.close-icons>a:hover,.navbar-default .navbar-nav>li.close-icons>a:focus{background-color:transparent}.cc-popup-load .k-grid.append-grid-changes table thead tr th .k-link span.k-column-title{font-size:14px;font-weight:600;text-transform:capitalize;color:#1a3e6f;font-family:"Intel Clear","Helvetica Neue",Helvetica,Arial,sans-serif}.cc-popup-load .k-grid.append-grid-changes table thead tr th{border-color:#c1c1c1}
+﻿#copyCntrctDlg {
+    padding: 0 !important;
+    height: 595px;
+    position: relative;
+}
+
+div#copyCntrctDlg .ss-loading-overlay {
+    top: 50px !important;
+    height: 94% !important;
+}
+
+    div#copyCntrctDlg .ss-loading-overlay .myLoader {
+        left: 31%;
+        top: 25%;
+    }
+
+.cc-popup-load #copyCntrctGrid td {
+    cursor: pointer !important
+}
+
+.cc-popup-load .k-grid td.k-state-selected, .cc-popup-load .k-grid tr.k-state-selected > td {
+    border: none;
+    background-color: #00AEEF !important;
+    color: white !important
+}
+
+.cc-popup-load .k-grid > td {
+    padding: 0
+}
+
+.cc-popup-load .k-grid td {
+    cursor: pointer
+}
+
+.cc-popup-load .inner-addon {
+    position: relative
+}
+
+    .cc-popup-load .inner-addon .glyphicon {
+        position: absolute;
+        padding: 9px;
+        pointer-events: none
+    }
+
+.cc-popup-load .left-addon .glyphicon {
+    left: 0
+}
+
+.cc-popup-load .right-addon .glyphicon {
+    right: 5px;
+    top: 3px
+}
+
+.cc-popup-load .form-control {
+    border-radius: 0 !important;
+    box-shadow: none !important;
+    border-color: #d2d6de !important
+}
+
+    .cc-popup-load .form-control:focus {
+        border-color: #3c8dbc !important
+    }
+
+.cc-popup-load .btn {
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid transparent
+}
+
+.cc-popup-load .btn-primary[disabled], .cc-popup-load .btn-primary[disabled]:hover {
+    background-color: #edeff0 !important;
+    color: #b1babf !important;
+    border-color: #b1babf !important;
+    cursor: not-allowed !important;
+    pointer-events: all !important
+}
+
+.cc-popup-load .btn-secondary {
+    color: #0071c5 !important;
+    background: #fff !important;
+    border-color: #b1babf !important
+}
+
+    .cc-popup-load .btn-secondary:hover, .cc-popup-load .btn-secondary:focus, .cc-popup-load .btn-secondary.focus {
+        color: #0071c5 !important;
+        background-color: #edeff0 !important;
+        border-color: #b1babf !important
+    }
+
+.cc-popup-load .dis-approve {
+    margin-left: 67px
+}
+
+.cc-popup-load .k-grid.append-grid-changes td {
+    border: 0 !important
+}
+
+.cc-popup-load .k-grid.append-grid-changes table tbody tr {
+    background-color: transparent !important
+}
+
+    .cc-popup-load .k-grid.append-grid-changes table tbody tr td {
+        border-bottom: 1px solid #e6e6e6 !important
+    }
+
+.cc-popup-load .app-layers {
+    width: 375px;
+    margin-top: 10px;
+    margin-left: 67px
+}
+
+.cc-popup-load .cc-pop-up {
+    margin-top: -24px;
+    margin-left: -24px;
+    margin-right: -24px
+}
+
+.cc-popup-load nav.navbar.navbar-default.rmv-padding.cc-pop-up {
+    height: 50px
+}
+
+.cc-popup-load .title_style label {
+    font-weight: bold !important
+}
+
+.navbar-default .navbar-nav > li.close-icons > a:hover, .navbar-default .navbar-nav > li.close-icons > a:focus {
+    background-color: transparent
+}
+
+.cc-popup-load .k-grid.append-grid-changes table thead tr th .k-link span.k-column-title {
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: capitalize;
+    color: #1a3e6f;
+    font-family: "Intel Clear","Helvetica Neue",Helvetica,Arial,sans-serif
+}
+
+.cc-popup-load .k-grid.append-grid-changes table thead tr th {
+    border-color: #c1c1c1
+}
